<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="onboarding_app_name" translatable="false">CareerCompass</string>
    <string name="onboarding_brand_mark" translatable="false">CC</string>
    <string name="onboarding_error_dismiss">닫기</string>
    <string name="onboarding_error_dismiss_description">오류 안내 닫기</string>
    <string name="onboarding_back">뒤로가기</string>
    <string name="onboarding_progress_description">%1$d단계 중 %2$d단계</string>
    <string name="onboarding_step_label" translatable="false">STEP %1$d / %2$d</string>
    <string name="onboarding_step1_title">기본 정보를 알려주세요</string>
    <string name="onboarding_step1_description">공고 추천과 자소서 생성에 사용돼요</string>
    <string name="onboarding_step1_name_label">이름 *</string>
    <string name="onboarding_step1_name_placeholder">이름을 입력해 주세요</string>
    <string name="onboarding_step1_school_label">학교 *</string>
    <string name="onboarding_step1_school_placeholder">학교를 선택해 주세요</string>
    <string name="onboarding_step1_major_label">학과 *</string>
...
